package de.haw.gui.template;

import de.haw.gui.Selectable;
import de.haw.tree.Template;
import de.haw.tree.TemplateInstance;
import javafx.beans.property.BooleanProperty;
import javafx.beans.property.SimpleBooleanProperty;
import javafx.scene.layout.*;
import javafx.scene.paint.Color;

import java.util.logging.Logger;

/**
 *
 */
public class TemplatePane extends TurtleGraphic implements Selectable {
    private static final Logger LOGGER = Logger.getLogger(TemplatePane.class.getName());
    private final BooleanProperty selectedProperty;
    private final Template template;

    /**
     *
     */
    public TemplatePane(int width, int height, Template template) {
        super(width, height);

        this.template = template;
        selectedProperty = new SimpleBooleanProperty(false);
        init();

        setBorder(new Border(new BorderStroke(
                Color.BLACK, BorderStrokeStyle.SOLID, CornerRadii.EMPTY, BorderWidths.DEFAULT)
        ));

        super.parseWord(new TemplateInstance(getTemplate().getId()), false);
    }

    public Template getTemplate() {
        return template;
    }

    @Override
    public boolean isSelected() {
        return selectedProperty.get();
    }

    @Override
    public void select() {
        selectedProperty.setValue(true);
    }

    @Override
    public void unselect() {
        selectedProperty.setValue(false);
    }

    @Override
    public void init() {
        selectedProperty.addListener((obs, old, newVal) -> {
            if (newVal) {
                setStyle("-fx-background-color: #00aa00");
            } else {
                setStyle("-fx-background-color: #FFFFFF");
            }
        });
    }
}