@startuml

title __TEMPLATES's Class Diagram__\n

  namespace de.haw {
    namespace gui {
      namespace templates {
        class de.haw.gui.template.TemplatePane {
            {static} - LOGGER : Logger
            - properties : Set<Property>
            - selectedProperty : BooleanProperty
            - word : String
            + TemplatePane()
            + getProperty()
            + getWord()
            + init()
            + isSelected()
            + select()
            + setProperty()
            + unselect()
        }
      }
    }
  }
  

  namespace de.haw {
    namespace gui {
      namespace templates {
        class de.haw.gui.template.TurtleGraphic {
            {static} - LOGGER : Logger
            - symbolCommands : Map<String, TurtleCommand>
            - templateVariables : Set<Character>
            + TurtleGraphic()
            + TurtleGraphic()
            + parseWord()
            + toString()
            # addAnchor()
            # init()
            # setTurtle()
            - initializeCommands()
            - setVariables()
        }
      }
    }
  }
  

  de.haw.gui.template.TemplatePane .up.|> de.haw.gui.Selectable
  de.haw.gui.template.TemplatePane -up-|> de.haw.gui.template.TurtleGraphic
  de.haw.gui.template.TurtleGraphic -up-|> javafx.scene.layout.Pane
  de.haw.gui.template.TurtleGraphic o-- de.haw.gui.State : state
  de.haw.gui.template.TurtleGraphic o-- de.haw.gui.turtle.Turtle : turtle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
